--- a/css/popup.css
+++ b/css/popup.css
@@ -17,6 +17,25 @@
     max-height: 90vh;
 }
 
+.opcoes {
+    text-align: start;
+    background-color: #097fe6;
+    padding: 5px;
+    border-radius: 3px;
+    margin: 3px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    font-size: 0.8rem;
+    color: white;
+}
+
+.opcoes-v2:hover {
+    color: white;
+    background-color: #323940;
+}
+
 .popup {
     position: fixed;
     z-index: 10001;
